--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover">
     <title>Products - Premium Vape Shop</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Firebase SDK -->
@@ -76,12 +76,24 @@
             box-sizing: border-box;
         }
 
+        html {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+
         body {
             margin: 0;
             padding: 0;
+            width: 100%;
+            height: 100%;
             overflow: hidden;
             background: #F5F7FA;
             font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            -webkit-text-size-adjust: 100%;
+            -moz-text-size-adjust: 100%;
+            -ms-text-size-adjust: 100%;
+            text-size-adjust: 100%;
         }
 
         /* Fixed Buttons */
@@ -132,12 +144,15 @@
         }
 
         .products-master-detail-section {
-            width: 100vw;
+            width: 100%;
+            max-width: 100vw;
             height: 100vh;
             display: flex;
             flex-direction: column;
             overflow: hidden;
             position: relative;
+            margin: 0;
+            padding: 0;
         }
 
         .products-header {
@@ -162,6 +177,7 @@
             flex-wrap: wrap;
             gap: 1.5rem;
             width: 100%;
+            max-width: 100%;
             position: relative;
         }
 
@@ -637,6 +653,17 @@
 
         /* Mobile Devices (480px and below) */
         @media (max-width: 480px) {
+            html, body {
+                width: 100%;
+                max-width: 100%;
+                overflow-x: hidden;
+            }
+
+            .products-master-detail-section {
+                width: 100%;
+                max-width: 100%;
+            }
+
             .fixed-admin-btn {
                 top: 8px;
                 right: 8px;
@@ -658,12 +685,29 @@
                 padding-top: 60px;
                 padding-left: calc(1rem + 40px);
                 padding-right: calc(1rem + 40px);
+                width: 100%;
+                max-width: 100%;
             }
 
             .header-content {
                 flex-direction: column;
                 align-items: flex-start;
                 gap: 0.75rem;
+                width: 100%;
+                max-width: 100%;
+            }
+
+            .master-detail-container {
+                width: 100%;
+                max-width: 100%;
+            }
+
+            .products-sidebar {
+                width: 100%;
+                max-width: 100%;
+            }
+
+            .flavors-display-area {
                 width: 100%;
                 max-width: 100%;
             }
@@ -750,11 +794,24 @@
 
         /* Small Mobile Devices (360px and below) */
         @media (max-width: 360px) {
+            html, body {
+                width: 100%;
+                max-width: 100%;
+                overflow-x: hidden;
+            }
+
+            .products-master-detail-section {
+                width: 100%;
+                max-width: 100%;
+            }
+
             .products-header {
                 padding: 0.65rem 0.875rem;
                 padding-top: 55px;
                 padding-left: calc(0.875rem + 35px);
                 padding-right: calc(0.875rem + 35px);
+                width: 100%;
+                max-width: 100%;
             }
 
             .brand-title {
