--- a/products.html
+++ b/products.html
@@ -419,22 +419,30 @@
 
         .flavors-grid-container {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
             gap: 1.5rem;
             width: 100%;
             max-width: 100%;
             box-sizing: border-box;
         }
 
+        /* Mobile: Force single column for very small screens */
+        @media (max-width: 600px) {
+            .flavors-grid-container {
+                grid-template-columns: 1fr !important;
+                gap: 0.75rem;
+            }
+        }
+
         .flavor-card {
             background: #FFFFFF;
             border: 1px solid #E2E8F0;
             border-radius: 12px;
-            padding: 2rem;
+            padding: 1.5rem;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
             display: flex;
             flex-direction: column;
-            gap: 1.25rem;
+            gap: 1rem;
             position: relative;
             width: 100%;
             max-width: 100%;
@@ -673,7 +681,7 @@
 
             .flavors-grid-container {
                 grid-template-columns: repeat(2, 1fr);
-                gap: 1rem;
+                gap: 0.875rem;
                 width: 100%;
                 max-width: 100%;
                 padding: 0;
@@ -684,16 +692,18 @@
                 max-width: 100%;
                 min-width: 0;
                 box-sizing: border-box;
-                padding: 1.5rem;
+                padding: 1.25rem;
+                gap: 0.875rem;
             }
 
             .flavor-name-display {
-                font-size: 1.3rem;
+                font-size: 1.15rem;
+                line-height: 1.3;
             }
 
             .flavor-id-display {
-                padding: 0.6rem 1.1rem;
-                font-size: 0.85rem;
+                padding: 0.5rem 0.9rem;
+                font-size: 0.8rem;
             }
         }
 
@@ -755,7 +765,7 @@
 
             .flavors-grid-container {
                 grid-template-columns: 1fr;
-                gap: 1rem;
+                gap: 0.875rem;
                 width: 100%;
                 max-width: 100%;
                 padding: 0;
@@ -766,11 +776,18 @@
                 max-width: 100%;
                 min-width: 0;
                 box-sizing: border-box;
-                padding: 1.5rem;
+                padding: 1.25rem;
+                gap: 0.875rem;
             }
 
             .flavor-name-display {
-                font-size: 1.25rem;
+                font-size: 1.1rem;
+                line-height: 1.3;
+            }
+
+            .flavor-id-display {
+                padding: 0.5rem 0.85rem;
+                font-size: 0.75rem;
             }
         }
 
@@ -870,27 +887,28 @@
 
             .flavors-grid-container {
                 grid-template-columns: 1fr;
-                gap: 1rem;
+                gap: 0.75rem;
                 width: 100%;
                 max-width: 100%;
                 padding: 0;
             }
 
             .flavor-card {
-                padding: 1.25rem;
-                gap: 1rem;
+                padding: 1rem;
+                gap: 0.75rem;
                 width: 100%;
                 max-width: 100%;
                 box-sizing: border-box;
             }
 
             .flavor-id-display {
-                padding: 0.55rem 1rem;
-                font-size: 0.8rem;
+                padding: 0.45rem 0.8rem;
+                font-size: 0.7rem;
             }
 
             .flavor-name-display {
-                font-size: 1.15rem;
+                font-size: 1rem;
+                line-height: 1.3;
             }
 
             .no-selection-message {
@@ -1047,8 +1065,8 @@
             }
 
             .flavors-grid-container {
-                grid-template-columns: repeat(2, 1fr);
-                gap: 1rem;
+                grid-template-columns: 1fr;
+                gap: 0.75rem;
                 width: 100%;
                 max-width: 100%;
                 padding: 0;
@@ -1059,6 +1077,18 @@
                 max-width: 100%;
                 min-width: 0;
                 box-sizing: border-box;
+                padding: 1rem;
+                gap: 0.75rem;
+            }
+
+            .flavor-name-display {
+                font-size: 1rem;
+                line-height: 1.3;
+            }
+
+            .flavor-id-display {
+                padding: 0.45rem 0.8rem;
+                font-size: 0.7rem;
             }
         }
 
@@ -1075,6 +1105,12 @@
         .flavor-id-display {
             word-wrap: break-word;
             overflow-wrap: break-word;
+            max-width: 100%;
+            hyphens: auto;
+        }
+
+        /* Ensure flavor cards never overflow */
+        .flavor-card * {
             max-width: 100%;
         }
 
