--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
     <section class="brands-section" id="brands">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">
-                    <i class="fas fa-tag"></i> Our Brands
-                </h2>
-                <p class="section-subtitle">Explore our premium brand collection</p>
+                <h2 class="section-title">Disposable</h2>
             </div>
             <div class="brands-filter-container">
                 <div class="brands-buttons-grid" id="brandsGrid">
