--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel - E-Commerce Store</title>
     <link rel="stylesheet" href="admin.css">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Chart.js for Data Visualization -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <!-- Firebase SDK -->
@@ -27,25 +29,22 @@
                     <h2>Admin Panel</h2>
                 </div>
                 <nav class="admin-nav">
-                    <a href="#dashboard" class="nav-item active" data-section="dashboard">
-                        <span>📊</span> Dashboard
-                    </a>
-                    <a href="#brands" class="nav-item" data-section="brands">
-                        <span>🏷️</span> Brands
+                    <a href="#brands" class="nav-item active" data-section="brands">
+                        <i class="fas fa-tag"></i> Brands
                     </a>
                     <a href="#flavours" class="nav-item" data-section="flavours">
-                        <span>🍬</span> Flavours
+                        <i class="fas fa-palette"></i> Flavours
                     </a>
                     <a href="#products" class="nav-item" data-section="products">
-                        <span>📦</span> Products
+                        <i class="fas fa-box"></i> Products
                     </a>
                     <a href="#database" class="nav-item" data-section="database">
-                        <span>📤</span> Database Upload
+                        <i class="fas fa-database"></i> Database Upload
                     </a>
                 </nav>
                 <div class="admin-header-actions">
-                    <a href="index.html" class="view-site-btn">View Site</a>
-                    <button onclick="adminLogout()" class="logout-btn" style="background: rgba(255, 255, 255, 0.15); color: var(--white); border: 1px solid rgba(255, 255, 255, 0.25); padding: 0.7rem 1.5rem; border-radius: 5px; cursor: pointer; transition: all 0.3s; white-space: nowrap; margin-left: 0.5rem;">
+                    <a href="index.html" class="view-site-btn">Go to Main Menu</a>
+                    <button onclick="adminLogout()" class="logout-btn">
                         <i class="fas fa-sign-out-alt"></i> Logout
                     </button>
                 </div>
@@ -54,175 +53,8 @@
 
         <!-- Main Content -->
         <main class="admin-content">
-            <!-- Dashboard Section -->
-            <section id="dashboard" class="content-section active">
-                <div class="dashboard-header">
-                    <h2>Dashboard Overview</h2>
-                    <div class="dashboard-actions">
-                        <button onclick="exportDashboardData()" class="btn-export-dashboard">
-                            <i class="fas fa-download"></i> Export Data
-                        </button>
-                    </div>
-                </div>
-                
-                <!-- Key Metrics Cards -->
-                <div class="key-metrics-grid">
-                    <div class="metric-card primary">
-                        <div class="metric-icon">
-                            <i class="fas fa-box"></i>
-                        </div>
-                        <div class="metric-content">
-                            <h3 class="metric-value" id="totalProducts">0</h3>
-                            <p class="metric-label">Total Products</p>
-                            <div class="metric-change">
-                                <i class="fas fa-arrow-up"></i>
-                                <span id="featuredProducts">0</span> featured
-                            </div>
-                        </div>
-                    </div>
-                    <div class="metric-card success">
-                        <div class="metric-icon">
-                            <i class="fas fa-dollar-sign"></i>
-                        </div>
-                        <div class="metric-content">
-                            <h3 class="metric-value" id="totalValue">$0.00</h3>
-                            <p class="metric-label">Inventory Value</p>
-                            <div class="metric-change">
-                                <i class="fas fa-box"></i>
-                                <span id="totalStock">0</span> units
-                            </div>
-                        </div>
-                    </div>
-                    <div class="metric-card info">
-                        <div class="metric-icon">
-                            <i class="fas fa-tags"></i>
-                        </div>
-                        <div class="metric-content">
-                            <h3 class="metric-value" id="totalBrands">0</h3>
-                            <p class="metric-label">Brands</p>
-                            <div class="metric-change">
-                                <i class="fas fa-palette"></i>
-                                <span id="totalFlavours">0</span> flavors
-                            </div>
-                        </div>
-                    </div>
-                    <div class="metric-card warning live-visitors-card" id="liveVisitorsCard">
-                        <div class="metric-icon">
-                            <i class="fas fa-users"></i>
-                        </div>
-                        <div class="metric-content">
-                            <h3 class="metric-value" id="liveVisitors">0</h3>
-                            <p class="metric-label">Live Visitors</p>
-                            <div class="metric-change live-indicator">
-                                <span class="live-dot"></span>
-                                <span>Active Now</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Charts and Analytics Section -->
-                <div class="dashboard-charts-grid">
-                    <!-- Product Status Chart -->
-                    <div class="chart-card">
-                        <div class="chart-header">
-                            <h3><i class="fas fa-chart-pie"></i> Product Status</h3>
-                        </div>
-                        <div class="chart-container">
-                            <canvas id="statusChart"></canvas>
-                        </div>
-                    </div>
-
-                    <!-- Brand Distribution Chart -->
-                    <div class="chart-card">
-                        <div class="chart-header">
-                            <h3><i class="fas fa-chart-bar"></i> Brand Distribution</h3>
-                        </div>
-                        <div class="chart-container">
-                            <canvas id="brandChart"></canvas>
-                        </div>
-                    </div>
-
-                    <!-- Inventory Health -->
-                    <div class="chart-card">
-                        <div class="chart-header">
-                            <h3><i class="fas fa-heartbeat"></i> Inventory Health</h3>
-                        </div>
-                        <div class="inventory-health" id="inventoryHealth">
-                            <div class="loading">Loading...</div>
-                        </div>
-                    </div>
-
-                    <!-- Price Analysis -->
-                    <div class="chart-card">
-                        <div class="chart-header">
-                            <h3><i class="fas fa-dollar-sign"></i> Price Analysis</h3>
-                        </div>
-                        <div class="chart-container">
-                            <canvas id="priceChart"></canvas>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Data Tables Section -->
-                <div class="dashboard-tables-grid">
-                    <!-- Top Products -->
-                    <div class="table-card">
-                        <div class="table-header">
-                            <h3><i class="fas fa-trophy"></i> Top Products by Value</h3>
-                            <a href="#products" class="view-all-link">View All <i class="fas fa-arrow-right"></i></a>
-                        </div>
-                        <div class="table-content" id="topProductsTable">
-                            <div class="loading">Loading...</div>
-                        </div>
-                    </div>
-
-                    <!-- Low Stock Alerts -->
-                    <div class="table-card">
-                        <div class="table-header">
-                            <h3><i class="fas fa-exclamation-triangle"></i> Low Stock Alerts</h3>
-                            <span class="alert-badge" id="lowStockCount">0</span>
-                        </div>
-                        <div class="table-content" id="lowStockTable">
-                            <div class="loading">Loading...</div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Quick Actions -->
-                <div class="quick-actions-section">
-                    <h3><i class="fas fa-bolt"></i> Quick Actions</h3>
-                    <div class="quick-actions-grid">
-                        <a href="#products" class="quick-action-card" data-section="products">
-                            <div class="quick-action-icon" style="background: linear-gradient(135deg, #667eea, #764ba2);">
-                                <i class="fas fa-plus"></i>
-                            </div>
-                            <span>Add Product</span>
-                        </a>
-                        <a href="#brands" class="quick-action-card" data-section="brands">
-                            <div class="quick-action-icon" style="background: linear-gradient(135deg, #f093fb, #f5576c);">
-                                <i class="fas fa-tag"></i>
-                            </div>
-                            <span>Add Brand</span>
-                        </a>
-                        <a href="#flavours" class="quick-action-card" data-section="flavours">
-                            <div class="quick-action-icon" style="background: linear-gradient(135deg, #4facfe, #00f2fe);">
-                                <i class="fas fa-palette"></i>
-                            </div>
-                            <span>Add Flavor</span>
-                        </a>
-                        <a href="index.html" class="quick-action-card" target="_blank">
-                            <div class="quick-action-icon" style="background: linear-gradient(135deg, #fa709a, #fee140);">
-                                <i class="fas fa-external-link-alt"></i>
-                            </div>
-                            <span>View Website</span>
-                        </a>
-                    </div>
-                </div>
-            </section>
-
             <!-- Brands Section -->
-            <section id="brands" class="content-section">
+            <section id="brands" class="content-section active">
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2rem;">
                     <h2 style="margin: 0;">Manage Brands</h2>
                     <button type="button" onclick="openBrandModal()" class="btn btn-primary" style="display: inline-flex; align-items: center; gap: 0.5rem;">
